[tool.poetry]
name = "pycaster"
version = "0.1.0"
description = "A simple Raycaster writen in Python"
authors = ["ShyAssassin <49711232+ShyAssassin@users.noreply.github.com>"]
repository = "https://github.com/ShyAssassin/PyCaster"
license = "MIT"

[tool.poetry.dependencies]
python = "~3.10"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
